[metadata]
name = django-random-image
version = 0.4
install_requires =
    django-filer
license = BSD-3-Clause
description = A Django app for displaying a randomly selected image out of a set of django-filer images.
long_description = file: README.rst
url = https://github.com/febsn/django-random-image
author = Fabian Lehner
author_email = fl@makonis.net
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
